--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="app.js" defer></script>
+    <!-- ts compiled script files -->
+    <script src="dataTypes.js" defer></script>
+    <script src="objects.js" defer></script>
     <title>Understanding TypeScript</title>
   </head>
   <body>
