added unions and aliases

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- ts compiled script files -->
     <script src="dataTypes.js" defer></script>
     <script src="objects.js" defer></script>
+    <script src="unionAliases.js"></script>
     <title>Understanding TypeScript</title>
   </head>
   <body>
