--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ts compiled script files -->
-    <script src="dataTypes.js" defer></script>
+    <!-- <script src="dataTypes.js" defer></script>
     <script src="objects.js" defer></script>
-    <script src="unionAliases.js"></script>
+    <script src="unionAliases.js"></script> -->
+    <script src="functions.js"></script>
     <title>Understanding TypeScript</title>
   </head>
   <body>
