--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <!-- ts compiled script files -->
     <!-- <script src="dataTypes.js" defer></script>
     <script src="objects.js" defer></script>
-    <script src="unionAliases.js"></script> -->
+    <script src="unionAliases.js" defer></script> -->
     <script src="functions.js"></script>
+    <script src="interfaces.js" defer></script>
+
     <title>Understanding TypeScript</title>
   </head>
   <body>
